--- a/turismo_p5/catalogo_guias/templates/catalogo_guias/home.html
+++ b/turismo_p5/catalogo_guias/templates/catalogo_guias/home.html
@@ -10,7 +10,7 @@
     <body>
         <h1>Home do site!!</h1>
         <div class="page-header">
-            <a href="{% url 'roteiro_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+            <a href="{% url 'roteiro_new' %}"><button>Cadastrar Roteiro</button></a>
         </div>
     </body>
 </html>
