--- a/turismo_p5/catalogo_guias/templates/catalogo_guias/roteiro_new.html
+++ b/turismo_p5/catalogo_guias/templates/catalogo_guias/roteiro_new.html
@@ -7,11 +7,11 @@
         <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="{% static 'css/catalogo_guias.css' %}">
     </head>
-    <body>
+    <body class="roteiro_new">
         <h1>Novo Roteiro</h1>
-        <form method="POST class="post-form">{% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="save btn btn-default">Save</button>
-    </form>
+        <form method="POST" class="roteiro-form">{% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">Save</button>
+        </form>
     </body>
 </html>
