--- a/turismo_p5/catalogo_guias/templates/catalogo_guias/home.html
+++ b/turismo_p5/catalogo_guias/templates/catalogo_guias/home.html
@@ -11,6 +11,7 @@
         <h1>Home do site!!</h1>
         <div class="page-header">
             <a href="{% url 'roteiro_new' %}"><button>Cadastrar Roteiro</button></a>
+            <a href="{% url 'atrativo_new' %}"><button>Cadastrar Atrativo</button></a>
         </div>
     </body>
 </html>
