--- a/turismo_p5/catalogo_guias/templates/catalogo_guias/ponto_new.html
+++ b/turismo_p5/catalogo_guias/templates/catalogo_guias/ponto_new.html
@@ -15,7 +15,7 @@
         <h1>Novo Ponto</h1>
         <form method="POST" class="roteiro-form">{% csrf_token %}
             {{ form }}
-            <!-- {% leaflet_map "mapa" %} -->
+            {% leaflet_map "mapa" %}
             <button type="submit">Enviar</button>
         </form>
     </body>
